--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,85 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bgNavbar {
+  background-color: #37bff5;
+margin-top: 10px;
+padding: 0px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.mainRoute {
+  background-color: "#00A2FF";
+  color:white;
+  height: auto;
+  margin: 0px;
+  padding-top: 6px ;
+vertical-align: middle;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.mainRoute:hover {
+color:  #37bff5;
+background-color:#03033b;
+}
+
+.droppdownNav {
+  margin-left: 12px;
+}
+
+.brandClass {
+  margin-left: 15px;
+padding: 0px;
+}
+
+table tbody {
+  margin: -10px;
+  display: block;
+  border-spacing: 10px;
+}
+
+.caruselContainer {
+position: relative;
+margin-left: 600px;
+margin-top: 50px;
+width: 95px;
+height: 125px;
+border: 2px solid lightskyblue;
+border-radius: 10px;
+box-shadow: 0 0 10px;
+overflow: hidden;
+}
+
+.caruselC {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  transition: all ease 2s;
 }
 
-.App-link {
-  color: #61dafb;
+.caruselItem {
+  flex-wrap: wrap;
+  margin: 5px;
+  width: 180px;
+  height: 110px;
+  border: 1px solid lightgreen;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.caruselImg {
+  width: 78px;
+  height: auto;
+}
+
+.podborkaTov {
+  position: relative;
+  display: flex;
+  margin-left: 100px;
+  max-width: 550px;
+  max-height: 200px;
+  margin-top: 50px;
+  border: 2px solid blue;
+}
+
+.podborkaItem {
+  margin-left: 5px;
+  max-width: 150px;
+  height: auto;
+  border: 1px solid lightgreen;
 }
